@@ -1,5 +1,5 @@
 <?php
-// $Id: common.inc,v 1.611.2.22 2009-01-16 19:26:09 drumm Exp $
+// $Id: common.inc,v 1.611.2.23 2009-04-30 00:13:48 drumm Exp $
 
 /**
  * @file
@@ -149,6 +149,15 @@ function drupal_set_header($header = NULL) {
  */
 function drupal_get_headers() {
   return drupal_set_header();
+}
+
+/**
+ * Make any final alterations to the rendered xhtml.
+ */
+function drupal_final_markup($content) {
+  // Make sure that the charset is always specified as the first element of the
+  // head region to prevent encoding-based attacks.
+  return preg_replace('/<head[^>]*>/i', "\$0\n<meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\" />", $content, 1);
 }
 
 /**
