@@ -1,7 +1,10 @@
-// $Id: CHANGELOG.txt,v 1.173.2.38 2009-02-25 23:27:32 drumm Exp $
+// $Id: CHANGELOG.txt,v 1.173.2.39 2009-04-30 00:13:48 drumm Exp $
 
-Drupal 5.17, xxxx-xx-xx (development version)
+Drupal 5.17, 2009-04-29
 -----------------------
+- Fixed security issues (Cross site scripting and limited information
+  disclosure) see SA-CORE-2009-005.
+- Fixed a variety of small bugs.
 
 Drupal 5.16, 2009-02-25
 -----------------------
